--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,15 +6,20 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.2.3",
     "create-path": "^2.0.1",
     "dom": "^0.0.3",
+    "mdb-react-ui-kit": "^5.1.0",
     "navigate": "^0.3.6",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
     "router": "^1.3.8",
     "switch": "^0.0.0",
+    "video-react": "^0.16.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -40,5 +45,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "css-loader": "^6.7.3",
+    "mini-css-extract-plugin": "^2.7.3",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.76.0"
   }
 }
