--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,6 @@ PORT=5000
 MONGO_DB_LINK=mongodb+srv://mari1234:mari1234@active.nshlmi1.mongodb.net/?retryWrites=true&w=majority
 JWT_SECRET=wearegreatwebdevelopers-ultrasecure-ultra-long-segreto
 JWT_EXPIRES_IN=30d
+CLIENT_URL=localhost://3000
+EMAIL_ADDRESS=azzurromarianna@campus.masterschool.com
+EMAIL_PASSWORD=wclcqtuhzgvawyvl
