--- a/backend/package.json
+++ b/backend/package.json
@@ -12,9 +12,11 @@
     "colors": "^1.4.0",
     "concurrently": "^7.6.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^7.0.0",
+    "nodemailer": "^6.9.1",
     "nodemon": "^2.0.20"
   }
 }
