--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,4 @@ JWT_EXPIRES_IN=30d
 CLIENT_URL=localhost://3000
 EMAIL_ADDRESS=azzurromarianna@campus.masterschool.com
 EMAIL_PASSWORD=wclcqtuhzgvawyvl
+HOST=http://localhost:3000
